--- a/palidictionary/index.html
+++ b/palidictionary/index.html
@@ -10,5 +10,117 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
   <script>
   </script>
+  <!--
+  
+'Tôi nguyện hồi hướng chia sẻ tất cả công đức phước báu thiện lành của tôi với tất cả chúng sinh. Tôi chia sẻ tất cả công đức phước báu thiện lành của tôi với cha mẹ, thầy tổ, thân bằng quyến thuộc, bạn hữu, thiên tử hộ trì bảo vệ của tôi, thiên tử hộ trì bảo vệ nhà tôi, thiên tử hộ trì bảo vệ làng tôi, thiên tử hộ trì bảo vệ phố tôi, thiên tử hộ trì bảo vệ đất nước tôi, thiên tử hộ trì bảo vệ trái đất này, Ma vương, Nhân vương, Thiên vương, Diêm vương, Phạm thiên, chư thiên và ngạ quỉ. 
+'Nguyện cầu mong cho tất cả mọi chúng sinh đều nhận được mọi công đức mà tôi đã tạo được, nguyện ước cho tất cả luôn bình an và sớm giác ngộ giải thoát hoàn toàn khỏi mọi khổ đau, phiền não, thoát khỏi mọi hiểm nguy, chấm dứt luân hồi sinh tử trong Tam Tạng, đạt được hạnh phúc thật sự, tự Do thật sự - Niết Bàn. 
+'Nguyện cho mọi công đức phước báu thiện lành của tôi trong vô lượng kiếp từ trước tới nay sẽ là duyên lành giúp tôi kham nhẫn, tinh tấn không ngừng nghỉ để thành tựu Đạo, Quả đoạn tận mọi lậu hoặc, hoàn toàn giác ngộ giải thoát ngay trong kiếp sống này. 
+'Nguyện cầu mong thiên tử hộ trì bảo vệ trái đất hãy chứng thực lời cầu nguyện này của tôi. 
+'Xin cho tất cả các chúng sinh nghe thấy được những lời nguyện cầu mong ước của tôi và cùng hoan hỉ vui mừng với những công đức phước báu thiện lành của tôi. 
+'Sādhu Sādhu Sādhu! 
+'(1) Con xin hết lòng tôn kính cúng dường Đức Phật bằng việc thực hành đúng theo Chánh pháp: Giới - Định - Tuệ tương ưng với chín Pháp siêu thế.
+'(2) Con xin hết lòng tôn kính cúng dường Pháp bằng việc thực hành đúng theo Chánh pháp: Giới - Định - Tuệ tương ưng với chín Pháp siêu thế. 
+'(3) Con xin hết lòng tôn kính cúng dường Tăng đoàn bằng việc thực hành đúng theo Chánh pháp: Giới - Định - Tuệ tương ưng với chín Pháp siêu thế.
+'Sādhu Sādhu Sādhu! 
+'Lành thay Lành thay Lành thay! 
+'-----------------------
+'Nguyện Cho với tất cả phước báu nào có được chúng con tác ý dâng lên cúng dường ba Ngôi Tam Bảo cùng Cha Mẹ Thầy Tổ,xin chia phước đến Chư Thiên Phạm Thiên, Tứ Đại Thiên Vương, Chư Thiên Hộ Trì cho Tam Bảo ở khắc các Châu Quận,Chư Thần Long Vương dưới nước trên bờ,Chư Dạ Xoa,A Tu La ,Càng Thát Bà,Ngạ Quỷ,và tất cả chúng sanh hữu hình hay vô hình ở khắp cùng 3 giới 4 loài,31 cõi.
+'Imāya dhammānudhammapaṭipattiyā Buddhaṃ pūjemi.
+'Với phần phước thanh cao này chúng con xin cúng dường Phật Bảo.
+'Imāya dhammānudhammapaṭipattiyā Dhammaṃ pūjemi.
+'Với phần phước thanh cao này chúng con xin cúng dường Pháp Bảo.
+'Imāya dhammānudhammapaṭipattiyā Saṃghaṃ pūjemi.
+'Với phần phước thanh cao này chúng con xin cúng dường Tăng Bảo.
+'Addhā imāya paṭipattiyā jāti-jarā-byādhi-maraṇamhā parimuccissāmi.
+'Với phần phước thanh cao này chúng con xin cúng dường Cha,mẹ cùng thầy tổ.
+'Idaṃ Me puññaṃ nibbānassa paccayo hotu.
+'Với phần phước thanh cao này hãy là nhân là duyên đưa đến chứng đắt A La Hán Thánh Đạo A La Hán Thánh Quả ,chứng đạt Niết Bàn trong ngày vị lai.
+'Idaṃ Me ñātinaṃ hotu, sukhitā hontu ñātayo.
+'Cầu mong phước thiện bố thí thanh cao này được thành tựu đến thân bằng quyến thuộc của chúng con, cầu mong thân bằng quyến thuộc thoát khỏi cảnh khổ, được an lạc lâu dài.
+'Idaṃ Me puññaṃ āsavakkhayāvahaṃ hotu.
+'Phước lành này của chúng con, nguyện đoạn trừ các lậu hoặc trầm luân.
+'Mama puñña bhāgaṃ sabba sattānaṃ bhājemi.
+'Phần phước thanh cao này của chúng con xin chia cho tất cả chúng sinh.
+'Buddhasanam ciram titthatu.
+'Nguyện Cho Phật Giáo trường tồn. 
+'Nguyện hồi hướng phước đức này đến Chư Thiên, Các vị Dạ Xoa, Càn Thát Bà, Long Vương trên cạn và dưới nước. 
+'Nếu Sự thật là con chưa từng dùng tà thuật với bất kỳ ai, với bất kỳ người nào, với bất kỳ mục đích nào từ tình cảm, thù oán, tài sản thì tất cả những người có tên trong danh sách dưới đây, cũng những người mà con chưa biết, cùng những người bị người ta hãm hại vu cáo cho con. Nếu tất cả những người này dùng tà thuật, bùa, ngãi với Nguyễn Văn Hiến, Trần Thị Chứ, Nguyễn Phúc Thịnh, Nguyễn Việt Xô thì tất cả tà thuật, bùa, ngãi, trù,ếm, âm mưu hãm hại... đều được hoá giải triệt để, sạch sẽ, không thể tái sử dụng, không có hiệu lực:
+'Nếu sự thật là thằng chạy võ lái máy xe làm con vứt máy tính xuống sông, gây tổn thất tài sản nhưng con không làm gì có lỗi với họ thì với sự thật này, tất cả bùa, ngãi, thư, ếm, âm binh, ma quỷ của thằng này cùng với thằng Trần Văn Ngoan đều được hoá giải, đều trở nên vô dụng, đều trở nên thất bại, đều không thể thực hiện, đều bại lộ âm mưu. Nếu sự việc này Do gia đình Út Vườn Cò gây ra thì nguyện với sự thật này, tất cả hao tổn tài sản sẽ làm cho tà thuật vô hiệu, nếu tà thuật này đến từ Út Vườn Cò, thằng Ngoan, thằng Hải, thằng Phú, thằng Nhẫn, con Nhanh, con Lẹ, vợ thằng Hải, thằng Khuyên và tất cả những người giúp đỡ Út Vườn Cò như cháu nội thầy bùa 3 Mừng, thầy bùa Nam.
+'Hoá giải tất cả tà thuật từ cháu nội thầy bùa 3 Mừng, thầy Bùa Nam, thầy Bùa 3 Mừng.
+'Hoá giải tất cả tà thuật từ Út Vườn Cò, thằng Ngoan, thằng Hải, thằng Phú, thằng Nhẫn, con Nhanh, con Lẹ, vợ thằng Hải, thằng Khuyên và tất cả những người giúp đỡ Út Vườn Cò như cháu nội thầy bùa 3 Mừng, thầy bùa Nam.
+'Nếu sự thật là con chưa từng sử dụng tà thuật với thằng Nguyễn Việt Xô, thì phước đức này cũng sẽ hoá giải triệt để, sạch sẽ, không thể tái nhiễm tất cả tà thuật của thằng Nguyễn Việt Xô và những người nó thuê mướn liên kết.
+
+'Hoá giải bùa ngãi nằm mơ, bùa ngãi gây ra bệnh, bùa ngãi gây ra phiền não, bùa ngãi gây ảo giác, bùa ngãi gây hoang tưởng, bùa ngãi gây đau nhứt cơ thể, bùa ngãi không thể làm việc, bùa ngãi khí độc, bùa ngãi gây buồn ngủ, bùa ngãi xâm nhập từ tưởng thức, bùa ngãi xâm nhập từ đường hậu môn, sóng lưng, mắt, mũi, miệng, tai.
+
+'Hoá giải tất cả tà thuật từ thằng Trần Quang Vịnh, 6 Chia, Nhật Quang, Như Hảo.
+'Hoá giải tất cả tà thuật từ gia đìnhg 6 Nghĩa, gồm thằng Nguyễn Việt Xô, thằng Quang, thằng Út, thằng Khoa.
+
+' Nguyện với thiện nghiệp này cùng với sự thật là: con chưa từng chủ ý dùng tà thuật với bất kỳ ai nhằm mục đích tà dục, tà dâm
+' thì mọi sẽ giúp hoá giải tất cả tà thuật cho các thành viên trong gia đình con gồm:
+' Trần Thị Chứ, Nguyễn Phúc Thịnh, Nguyễn Ngọc Thơ, Nguyễn Văn Hiến
+' Tả thuật được đưa vào từ hậu môn, miệng, mắt, lưng, bụng, tai, mũi
+' Đặc biệt hoá giải tất cả tà thuật trấn bằng tưởng của thầy bùa xuống cõi này, cõi kia, tà thuật nằm mơ, tà điên, tà ngáo, tà hại sinh mạng, tà thuật ném đá dấu tay, tà thuật vu khống, tà làm lười học
+' Đặc biệt hoá giải tất cả tà thuật nhắm vào cháu Nguyễn Phúc Thịnh
+' ****************************************
+' Đặc biệt tà thuật đến từ những người sau:
+' Nguyện với phước đức này làm lộ rõ âm mưu hại chết ông Nguyễn Văn Chiếu, cháu Khải;
+' Hoá giải tất cả cả bùa, ngãi, thư, ếm, âm binh từ thằng Trần Văn Ngoan, Trần Văn Út, Trần Văn Hải, vợ thằng Hải, vợ thằng Ngoan, và các con dâu, con gái, con rễ của Út Vườn Cò gồm: Nhẫn, Phú, Khuyên; tất cả các con cháu của Út Vườn Cò; vợ Út Vườn Cò; anh em bên vợ Út Vườn Cò; tất cả những thầy bùa, thầy ngãi, thầy phong thủy, thầy pháp do gia đình Út Vườn Cò thuê mướn; tất cả những người tự nguyện giúp đỡ;
+' Hóa giải tất cả tà thuật đến từ thằng Trần Quang Vịnh, Phạm Thị Vui, Trần Thị Chia; con cháu Trần Quang Vịnh;
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ gia đình con vợ thằng Ngoan, thằng Hoàng, con Riêng;
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ gia đình 2 Hùng - chùa;
+' Hóa giải tất cả cả bùa thú, ngãi thú; bùa chim, ngãi chim; bùa mèo, bùa chó, bùa điên, bùa tà dâm, bùa ám ảnh, bùa hoặc ngãi ếm trên đất, bùa hoặc ngãi ếm trên cây cỏ, bùa tưởng, bùa ma, bùa năng lượng thấp, bùa quên, bùa lẫn, bùa âm lực, bùa mơ, ngãi mơ; âm binh nhập vào cơ thể; ngãi đọc tư tưởng; ngãi nói; ngãi nghe; bùa bóng; bùa gây ra hoang tưởng; bùa hại sinh mạng; bùa gây bệnh; 
+' Hóa giải tất cả bùa ngãi mà thầy phong thủy 7 Liêm đã ếm hại lên nhà bếp, lên đất;
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ thầy bùa 7 Liêm, thầy bùa 3 Mừng, thầy bùa Nam, thầy bùa con thằng Nam, thầy bùa 3 Nhang;
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ những người mà do thằng Nhẫn hãm hại vu khống;
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ những người mà do con Phạm Thị Vui hãm hại vu khống;
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ những người mà do thằng Trần Văn Ngoan hãm hại vu khống;
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ những người mà do thằng Trần Văn Chiến hãm hại vu khống;
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ những người mà do thằng Non hãm hại vu khống;
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ những người mà do thằng Triều hãm hại vu khống;
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ những người mà do thằng Bắc hãm hại vu khống;
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ những người mà do thằng Xô hãm hại vu khống;
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ gia đình 8 Đực, Hùng, vợ thằng Hùng, con cháu 8 Đực;
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ gia đình 2 Chiến, Hữu Kỳ, vợ 2 Chiến, con gái 2 Chiến, con rễ 2 Chiến, cháu nội và cháu ngoại 2 Chiến; anh chị em của 2 Chiến;
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ gia đình 5 Kỹ, Út Thì, 2 Lâm, 7 Hưởng, 3 Diễn; và tất cả con trai, con gái; dâu, rễ; cháu trai, cháu gái; cháu dâu, cháu rễ;
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ gia đình 2 Giang, 5 Mới, thằng Phê, thằng Sa, thằng Hùng, thằng Dum; và tất cả con trai, con gái; dâu, rễ; cháu trai, cháu gái; cháu dâu, cháu rễ;
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ gia đình Út Thủy; và tất cả con trai, con gái; dâu, rễ; cháu trai, cháu gái; cháu dâu, cháu rễ;
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ gia đình Út Tròn; và tất cả con trai, con gái; dâu, rễ; cháu trai, cháu gái; cháu dâu, cháu rễ;
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ gia đình 10 Sơn; và tất cả con trai, con gái; dâu, rễ; cháu trai, cháu gái; cháu dâu, cháu rễ;
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ gia đình 5 Quờn; và tất cả con trai, con gái; dâu, rễ; cháu trai, cháu gái; cháu dâu, cháu rễ;
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ gia đình 4 Lâm; thằng Dăng; và tất cả con trai, con gái; dâu, rễ; cháu trai, cháu gái; cháu dâu, cháu rễ;
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ gia đình 4 Bền; và tất cả con trai, con gái; dâu, rễ; cháu trai, cháu gái; cháu dâu, cháu rễ;
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ gia đình thằng Gia; và tất cả con trai, con gái; dâu, rễ; cháu trai, cháu gái; cháu dâu, cháu rễ;
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ gia đình 2 Thắng; và tất cả con trai, con gái; dâu, rễ; cháu trai, cháu gái; cháu dâu, cháu rễ;
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ gia đình thằng Bình; và tất cả con trai, con gái; dâu, rễ; cháu trai, cháu gái; cháu dâu, cháu rễ; người làm thuê; người mướn;
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ gia đình 3 Thiều; và tất cả con trai, con gái; dâu, rễ; cháu trai, cháu gái; cháu dâu, cháu rễ; người làm thuê; người mướn;
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ gia đình thằng Khái, thằng Trường, thằng Long, thằng Tỷ;
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ gia đình thằng Bắc; anh chị em ruột; anh chị em bên vợ;
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ gia đình thằng Chính; anh chị em ruột; anh chị em bên vợ;
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ gia đình thằng Trãi (Út On);
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ gia đình thằng Nhã, anh chị em ruột, anh chị em bên nội và bên ngoại, chú, thím;
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ gia đình con Như; anh chị em ruột; anh chị em bên vợ;
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ gia đình con Ánh Xuân; anh chị em ruột; anh chị em bên vợ; chồng; con chồng; người thuê mướn;
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ thằng Rồi 2 Chiến; anh chị em ruột; anh chị em bên vợ; chồng; con chồng; người thuê mướn; con cháu;
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ gia đình 7 Nhãn; anh chị em ruột; con cháu; dâu rễ;
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ gia đình Út Tâm; anh chị em ruột; con cháu; dâu rễ;
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ gia đình thằng Đoàn; con cháu; dâu rễ;
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ gia đình Út Téo; anh chị em ruột; con cháu; dâu rễ;
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ gia đình 2 Giang Anh; anh chị em ruột; con cháu; dâu rễ;
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ gia đình thằng Nguyên, anh chị em ruột, anh chị em bên vợ;
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ gia đình 9 Hùng; anh chị em ruột; con cháu; dâu rễ; anh chị em bên vợ; 
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ gia đình 7 Nô; con cháu; dâu rễ; anh em ruột; vợ; anh chị em vợ; con dâu; con rễ;
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ gia đình thằng Nhẫn và các anh chị em ruột, anh chị em bà con;
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ gia đình thằng Phú và các anh chị em ruột, anh chị em bà con, anh rễ, em dâu, con cháu;
+' Hóa giải tất cả cả bùa, ngãi, thư, ếm, âm binh đến từ thằng Nguyễn Việt Xô;
+' Hóa giải tất cả bùa, ngãi, thư, ếm, âm binh của thằng Tùng 5 Y do thằng gia đình Út Vườn Cò thuê mướn;
+' Hóa giải tất cả bùa, ngãi, thư, ếm, âm binh của bọn thầy bùa chạy máy xe do thằng gia đình Út Vườn Cò thuê mướn;
+' Hóa giải tất cả bùa, ngãi, thư, ếm, âm binh của thầy Hùng do thằng gia đình Út Vườn Cò thuê mướn;
+' Hóa giải tất cả bùa, ngãi, thư, ếm, âm binh của thằng Huấn - 3 Hoành;
+' Hóa giải tất cả bùa, ngãi, thư, ếm, âm binh của thằng Non điện tử;
+' Hóa giải tất cả bùa, ngãi, thư, ếm, âm binh của thằng Triều (2 Thần Nông), anh em ruột thằng Triều, anh em bên vợ thằng Triều;
+' Hóa giải tất cả bùa, ngãi, thư, ếm, âm binh của thằng Non điện tử;
+
+' Hoá giải tà thuật âm binh thằng lằn
+  -->
 </body>
 </html>
