--- a/palidictionary/index.html
+++ b/palidictionary/index.html
@@ -6,7 +6,7 @@
   <link href="style.css" rel="stylesheet" />
 </head>
 <body>
-<h1>Hello world</h1>
+<h1>Pali Dictionary</h1>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
   <script>
   </script>
@@ -43,7 +43,7 @@
 'Phần phước thanh cao này của chúng con xin chia cho tất cả chúng sinh.
 'Buddhasanam ciram titthatu.
 'Nguyện Cho Phật Giáo trường tồn. 
-
+' Nguyện cho phước đức này hóa giải trọn vẹn tà thuật đến từ thằng Trần Văn Ngon, con Trần Kim Nhanh và Út Vườn Cò, vợ Út Vườn Cò; con trai con gái Út Vườn Cò; con dâu con rễ Út Vườn Cò;'
 
 '
   -->
