--- a/palidictionary/apiv3/index.html
+++ b/palidictionary/apiv3/index.html
@@ -44,7 +44,28 @@
 'Buddhasanam ciram titthatu.
 'Nguyện Cho Phật Giáo trường tồn. 
 ' Nguyện cho phước đức này hóa giải trọn vẹn tà thuật đến từ thằng Trần Văn Ngon, con Trần Kim Nhanh và Út Vườn Cò, vợ Út Vườn Cò; con trai con gái Út Vườn Cò; con dâu con rễ Út Vườn Cò;'
-
+' Nếu sự thật là con chưa từng sử dụng tà thuật với bất cứ người đàn ông hay người đàn bà nào thì với sự thật này, các nguyện ước sau đều trở thành hiện thực:
+'Và nguyện phước đức này bảo vệ sinh mạng cháu Nguyễn Phúc Thịnh, Nguyễn Ngọc Thơ
+'Nguyện phước đức này hóa giải bùa nhái, bùa ếch, bùa thằng lằn của thằng Trần Văn Ngoan, gia đình Út Vườn Cò. Hóa giải tất cả bùa, ngãi, thư, ếm, âm binh của thằng chạy máy xe (do gia đình Trần Văn Út, Trần Văn Ngoan thuê mướn). Hóa giải tất cả cả bùa, ngãi, thư, ếm của băng đảng chạy võ (do gia đình Trần Văn Út, Trần Văn Ngoan thuê mướn).
+'Nguyện phước đức này hóa giải bùa ngãi do thằng Trần Văn Út (Út Vườn Cò) ếm lên đất nhà con, giải bùa bóng đen, giải bùa đốm sáng, giải bùa đẩy tâm thức vào cõi tưởng.
+'Và nguyện với phước đức này cũng sẽ hóa giải triệt để, vĩnh viễn các loại bùa, ngãi, thư, ếm, âm binh, ma quỷ, bùa lỗ bang, bùa ngãi hại không làm việc được, bùa ngãi tà tâm, bùa ngãi rối loạn tâm thần, bùa điên, ngãi nghe, ngãi nói, tà ếm binh vào mũi, vào miệng, vào mặt, do những người sau làm ra: Trần Văn Ngoan, Trần Văn Út, con rễ Trần Văn Út và các loại tà thuật do họ thỉnh về, mua. Hoặc được người giúp đỡ. Hoặc được người cho. Hoặc do nhặt được.
+'Nguyện cho phước đức này gia trì cho công việc phát triển phần mềm Tummo Spell 2025 được hoàn thiện.
+'Và nguyện với phước đức này cũng sẽ hóa giải triệt để, vĩnh viễn các loại bùa, ngãi, thư, ếm, âm binh, ma quỷ, bùa lỗi bang, ngãi do những người sau làm ra: Nguyễn Việt Xô và các loại tà thuật do họ thỉnh về, mua. Hoặc được người giúp đỡ. Hoặc được người cho. Hoặc do nhặt được.
+'Và nguyện với phước đức này cũng sẽ hóa giải triệt để, vĩnh viễn các loại bùa, ngãi, thư, ếm, âm binh, ma quỷ, bùa lỗi bang, ngãi do những người sau làm ra: thằng Phong (con nuôi Út Vườn Cò) và các loại tà thuật do họ thỉnh về, mua. Hoặc được người giúp đỡ. Hoặc được người cho. Hoặc do nhặt được.
+'Và nguyện với phước đức này cũng sẽ hóa giải triệt để, vĩnh viễn các loại bùa, ngãi, thư, ếm, âm binh, ma quỷ, bùa lỗi bang, ngãi do Trần Thị Chia, Phạm Thị Vui, Trần Quang Vịnh làm ra hoặc các loại tà thuật do họ thỉnh về, mua. Hoặc được người giúp đỡ. Hoặc được người cho. Hoặc do nhặt được.
+'Và nguyện với phước đức này cũng sẽ hóa giải triệt để, vĩnh viễn các loại bùa lỗ bang, bùa kêu gọi thế lực bóng đen do thầy bùa Tư Lâm, con thầy bùa Tư Lâm (thằng Dăng)
+'Và nguyện với phước đức này cũng sẽ hóa giải triệt để, vĩnh viễn các loại bùa lỗ bang, bùa kêu gọi thế lực bóng đen do thằng Ngô Minh Thùy tạo ra.
+'Và nguyện với phước đức này cũng sẽ hóa giải triệt để, vĩnh viễn các loại bùa, ngãi, thư, ếm, âm binh, ma quỷ, bùa lỗ bang, ngãi do BS Liệt tạo ra.
+'Và nguyện cho phước đức này hóa giải tà thuật, bùa, ngãi, thư, ếm, âm binh, ma quỷ đến từ thằng Diểu, thằng Hùng (8 Đức)
+'Và nguyện cho phước đức này hóa giải tà thuật, bùa, ngãi, thư, ếm, âm binh, ma quỷ được triển khai trên số điện thoại 0769337020, 0924286382.
+'Và nguyện cho phước đức này hóa giải tà thuật, bùa, ngãi, thư, ếm, âm binh, ma quỷ đến từ gia đình con Ánh Tuyết, 2 Chiến
+'Và nguyện cho phước đức này hóa giải tà thuật, bùa, ngãi, thư, ếm, âm binh, ma quỷ đến từ gia đình Hữu Kỳ (2 Chiến)
+'Và nguyện cho phước đức này hóa giải tà thuật, bùa, ngãi, thư, ếm, âm binh, ma quỷ đến từ thằng trợ giúp Trần Quang Vịnh (sống tại khu vực nhà ông Út On)
+'Và nguyện cho phước đức này hóa giải tà thuật, bùa, ngãi, thư, ếm, âm binh, ma quỷ đến từ thằng Tùng (5 Y)
+'Và nguyện cho phước đức này hóa giải tà thuật, bùa, ngãi, thư, ếm, âm binh, ma quỷ đến từ thằng 2 Giang
+'Và nguyện cho phước đức này hóa giải tà thuật, bùa, ngãi, thư, ếm, âm binh, ma quỷ đến từ thằng Phong (con nuôi Út Vườn Cò)
+'Và nguyện cho con biết cách hóa giải bùa ngải, vô hiệu hóa bùa ngãi, phát hiện được tất cả địa điểm mà họ đã ếm bùa, ếm âm binh trên mảnh đất nhà con.
+'Và người được hóa giải là Nguyễn Phúc Thịnh, Nguyễn Ngọc Thơ, Nguyễn Văn Hiến, Trần Thị Chứ.
 '
   -->
 </body>
